<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutProjectItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left|center"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10"
    android:background="@drawable/ginfo_card_gtradient"
    >

    <TextView
        android:id="@+id/textViewProjectInfo"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
